--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ Like the code? Star it on github!
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="src/styles.css">
+        <script src="src/scripts.js"></script>
     </head>
     <body>
         <header>
@@ -36,5 +37,8 @@ Like the code? Star it on github!
                 <a class="redHover" href=""><li>contact</li></a>
             </ul>
         </nav>
+        <section>
+            <h1>About</h1>
+        </section>
     </body>
 </html>
