changed animations to transform and others

--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@ Like the code? Star it on github!
 ▓▄▌▀░▀░▐▀█▄▓▓██████████▓▓▓▌█
 -->
     <body>
+        
         <header>
-            <h1>Hello I'm Roberto</h1>
-            <button>What do I do?</button>
+            <h1>Hello, I'm Roberto</h1>
+            <button>What do I do?<span class="arrow">→</span></button>
         </header>
         <nav>
             <ul>
-                <a class="redHover" href=""><li>home</li></a>
-                <a class="redHover" href=""><li>about</li></a>
-                <a class="redHover" href=""><li>portfolio</li></a>
-                <a class="redHover" href=""><li>contact</li></a>
+                <a class="text-color-hover" href=""><li>home</li></a>
+                <a class="text-color-hover" href=""><li>about</li></a>
+                <a class="text-color-hover" href=""><li>portfolio</li></a>
+                <a class="text-color-hover" href=""><li>contact</li></a>
             </ul>
         </nav>
         <section>
