--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ Like the code? Star it on github!
         </nav>
         <section>
             <h1>About</h1>
+            <code>$ whoami</code>
         </section>
     </body>
 </html>
